--- a/components/heroSection/style.css
+++ b/components/heroSection/style.css
@@ -109,6 +109,7 @@ body{
   margin-left: -50vw; 
   margin-right: -50vw; 
   width: 100vw;
+  z-index: -1
 }
 .cta-button {
   display: inline-block;
