--- a/components/navbar/style.css
+++ b/components/navbar/style.css
@@ -9,9 +9,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 0px 60px;
+  padding: 0px 60px;
   display: flex;
   min-height: 90px;
+  position: sticky;
+  top: 78px;
+  background: white;
 }
 
 .navbar-left {
@@ -107,7 +110,7 @@
   transition: 0.4s ease all;
   background-color: white;
   box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
-  /* z-index: -1000; */
+  z-index: 1000;
   flex-direction: row;
   /* border-top: 1px solid black; */
 }
